# recipe-book-assignment

./: .editorconfig  .gitattributes  .gitignore  README.md  Taskfile.yml  docker-compose.yml
.github/: dependabot.yml
client/: .dockerignore  Dockerfile  eslint.config.js  nuxt.config.ts  package-lock.json  package.json  pnpm-lock.yaml
client/components/: recipeform.vue  recipelist.vue  recipeview.vue
client/src/pages/: add.vue  create.vue  index.vue
client/src/pages/recipe/: id.vue
client/src/pages/recipes/: _id.vue
server/: .dockerignore  Dockerfile  pyproject.toml
server/app/: crud.py  database.py  main.py  models.py  schemas.py
server/src/: crud.py  database.py  main.py  models.py  schemas.py
server/src/routes/: recipes.py  root.py
server/tests/routes/: conftest.py  test_main.py  test_root.py
