[tool.poetry]
name = "server"
version = "0.1.0"
description = ""
authors = ["Somraj Saha <31373860+Jarmos-san@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.1"
uvicorn = "^0.30.3"


[tool.poetry.group.code-quality.dependencies]
mypy = "^1.11.1"
ruff = "^0.5.5"
black = "^24.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff.lint]
select = [
	"E", "F", "Q", "W", "D", "I", "N",
  "UP", "ANN", "ASYNC", "S", "B", "C",
  "G", "INP", "PIE", "PT", "RET", "ARG",
  "PTH", "TD", "TRY", "RUF"
]
fixable = ["ALL"]
ignore = ["ANN101", "ANN102"]

[tool.mypy]
ignore_missing_imports = true
