[tool.poetry]
name = "server"
version = "0.1.0"
description = ""
authors = ["Somraj Saha <31373860+Jarmos-san@users.noreply.github.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.4"
uvicorn = "^0.31.0"


[tool.poetry.group.code-quality.dependencies]
mypy = "^1.13.0"
ruff = "^0.8.1"
black = "^24.10.0"


[tool.poetry.group.testing.dependencies]
pytest = "^8.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff.lint]
select = [
	"E", "F", "Q", "W", "D", "I", "N",
  "UP", "ANN", "ASYNC", "S", "B", "C",
  "G", "INP", "PIE", "PT", "RET", "ARG",
  "PTH", "TD", "TRY", "RUF"
]
fixable = ["ALL"]
ignore = ["ANN101", "ANN102"]

[tool.ruff.lint.per-file-ignores]
"{src,tests}/**/__init__.py" = ["D104"]
"tests/**/test_*.py" = ["S101"]
"migrations/**/*.py" = ["INP001", "D100", "PIE790", "E501"]

[tool.mypy]
ignore_missing_imports = true
