[tool.poetry]
name = "server"
version = "0.1.0"
description = ""
authors = ["Somraj Saha <31373860+Jarmos-san@users.noreply.github.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.12"
uvicorn = "^0.35.0"


[tool.poetry.group.code-quality.dependencies]
mypy = "^1.14.1"
ruff = "^0.11.7"
black = "^25.1.0"


[tool.poetry.group.testing.dependencies]
pytest = "^8.3.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff.lint]
select = [
	"E", "F", "Q", "W", "D", "I", "N",
  "UP", "ANN", "ASYNC", "S", "B", "C",
  "G", "INP", "PIE", "PT", "RET", "ARG",
  "PTH", "TD", "TRY", "RUF"
]
fixable = ["ALL"]
ignore = ["ANN101", "ANN102"]

[tool.ruff.lint.per-file-ignores]
"{src,tests}/**/__init__.py" = ["D104"]
"tests/**/test_*.py" = ["S101"]
"migrations/**/*.py" = ["INP001", "D100", "PIE790", "E501"]

[tool.mypy]
ignore_missing_imports = true
